--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "openai": "^4.72.0",
     "prisma": "^5.21.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
